Implemented Duplication Rule to detect duplicate opportunity