@@ -5,6 +5,7 @@ import static com.fincity.saas.entity.processor.jooq.tables.EntityProcessorTicke
 import com.fincity.nocode.reactor.util.FlatMapUtil;
 import com.fincity.saas.commons.model.condition.AbstractCondition;
 import com.fincity.saas.commons.model.condition.ComplexCondition;
+import com.fincity.saas.commons.model.condition.FilterCondition;
 import com.fincity.saas.entity.processor.dao.base.BaseProcessorDAO;
 import com.fincity.saas.entity.processor.dto.Ticket;
 import com.fincity.saas.entity.processor.jooq.tables.EntityProcessorProducts;
@@ -14,7 +15,6 @@ import com.fincity.saas.entity.processor.service.product.ProductTicketRuRuleServ
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import org.jooq.Condition;
 import org.jooq.Field;
 import org.jooq.Record;
 import org.jooq.Record1;
@@ -63,45 +63,55 @@ public class TicketDAO extends BaseProcessorDAO<EntityProcessorTicketsRecord, Ti
     }
 
     public Mono<Ticket> readByNumberAndEmail(
-            ProcessorAccess access, ULong productId, Integer dialCode, String number, String email) {
-        return Mono.from(this.dslContext
-                        .selectFrom(this.table)
-                        .where(this.getOwnerIdentifierConditions(access, productId, dialCode, number, email))
-                        .orderBy(this.idField.desc())
-                        .limit(1))
-                .map(e -> e.into(this.pojoClass));
+            AbstractCondition condition,
+            ProcessorAccess access,
+            ULong productId,
+            Integer dialCode,
+            String number,
+            String email) {
+
+        AbstractCondition ownerIdentifierConditions =
+                this.getOwnerIdentifierConditions(condition, productId, dialCode, number, email);
+
+        return FlatMapUtil.flatMapMono(
+                () -> this.processorAccessCondition(ownerIdentifierConditions, access),
+                super::filter,
+                (pCondition, jCondition) -> Mono.from(this.dslContext
+                                .selectFrom(this.table)
+                                .where(jCondition.and(super.isActiveTrue()))
+                                .orderBy(this.idField.desc())
+                                .limit(1))
+                        .map(e -> e.into(this.pojoClass)));
     }
 
-    private List<Condition> getOwnerIdentifierConditions(
-            ProcessorAccess access, ULong productId, Integer dialCode, String number, String email) {
+    private AbstractCondition getOwnerIdentifierConditions(
+            AbstractCondition condition, ULong productId, Integer dialCode, String number, String email) {
 
-        List<Condition> conditions = new ArrayList<>();
+        List<AbstractCondition> conditions = new ArrayList<>();
 
-        conditions.add(this.appCodeField.eq(access.getAppCode()));
-        conditions.add(this.clientCodeField.eq(access.getEffectiveClientCode()));
+        if (condition != null && condition.isNonEmpty()) conditions.add(condition);
 
-        List<Condition> phoneEmailConditions = new ArrayList<>();
+        List<AbstractCondition> phoneEmailConditions = new ArrayList<>();
 
-        if (number != null)
-            phoneEmailConditions.add(ENTITY_PROCESSOR_TICKETS
-                    .DIAL_CODE
-                    .eq(dialCode.shortValue())
-                    .and(ENTITY_PROCESSOR_TICKETS.PHONE_NUMBER.eq(number)));
+        if (number != null && dialCode != null)
+            phoneEmailConditions.add(ComplexCondition.and(
+                    FilterCondition.make(Ticket.Fields.dialCode, dialCode),
+                    FilterCondition.make(Ticket.Fields.phoneNumber, number)));
 
-        if (email != null) phoneEmailConditions.add(ENTITY_PROCESSOR_TICKETS.EMAIL.eq(email));
+        if (email != null) phoneEmailConditions.add(FilterCondition.make(Ticket.Fields.email, email));
 
-        if (!phoneEmailConditions.isEmpty())
-            conditions.add(
-                    phoneEmailConditions.size() > 1
-                            ? phoneEmailConditions.get(0).or(phoneEmailConditions.get(1))
-                            : phoneEmailConditions.getFirst());
+        if (!phoneEmailConditions.isEmpty()) {
+            AbstractCondition phoneEmailCondition = phoneEmailConditions.size() > 1
+                    ? ComplexCondition.or(phoneEmailConditions)
+                    : phoneEmailConditions.getFirst();
+            conditions.add(phoneEmailCondition);
+        }
 
-        // we always need Active product entities
-        conditions.add(super.isActiveTrue());
+        if (productId != null) conditions.add(FilterCondition.make(Ticket.Fields.productId, productId));
 
-        if (productId != null) conditions.add(ENTITY_PROCESSOR_TICKETS.PRODUCT_ID.eq(productId));
+        if (conditions.isEmpty()) return null;
 
-        return conditions;
+        return ComplexCondition.and(conditions);
     }
 
     @Override
